base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    app: media
