base/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  template:
    spec:
      volumes: 
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  template:
    spec:
      volumes: 
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  template:
    spec:
      volumes: 
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  template:
    spec:
      volumes: 
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  template:
    spec:
      volumes: 
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  template:
    spec:
      volumes:
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  template:
    spec:
      volumes:
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      volumes:
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
spec:
  template:
    spec:
      volumes:
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  template:
    spec:
      volumes:
      - name: htpc-home
        persistentVolumeClaim:
          claimName: arr-data-pvc
