base/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-external
spec:
  ports:
  - name: http
    port: 8123
    targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant-external-1
  labels:
    kubernetes.io/service-name: homeassistant-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - 192.168.0.100
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
spec:
  ports:
  - name: http
    port: 8096
    targetPort: 8096
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin-external-1
  labels:
    kubernetes.io/service-name: jellyfin-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - 192.168.0.200
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: plex-external
spec:
  ports:
  - name: http
    port: 32400
    targetPort: 32400
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: plex-external-1
  labels:
    kubernetes.io/service-name: plex-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 32400
endpoints:
  - addresses:
      - 192.168.0.200
    conditions:
      ready: true
