base/ingress-route-homeassistant-external.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-external
  namespace: media
spec:
  entryPoints:
    - homeassistantsecure
  tls:
    certResolver: letsencrypt
  routes:
    - kind: Rule
      match: Host(`telheira.tplinkdns.com`)
      priority: 1
      services:
        - kind: Service
          name: homeassistant-external
          namespace: media
          port: 8123
