base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media
spec:
  entryPoints:
    - web
  routes:
#    - kind: Rule
#      match: PathPrefix(`/`)
#      middlewares: []
#      priority: 0
#      services:
#        - kind: Service
#          name: jellyfin
#          namespace: media
#          port: 8096
#    - kind: Rule
#      match: PathPrefix(`/transmission`)
#      middlewares: []
#      priority: 0
#      services:
#        - kind: Service
#          name: transmission
#          namespace: media
#          port: 9091
    - kind: Rule
      match: Host(`qbittorrent.telheira`)
      priority: 0
      services:
        - kind: Service
          name: qbittorrent
          namespace: media
          port: 8080
    - kind: Rule
      match: PathPrefix(`/prowlarr`)
      middlewares: []
      priority: 0
      services:
      - kind: Service
        name: prowlarr
        namespace: media
        port: 9696
    - kind: Rule
      match: PathPrefix(`/radarr`)
      middlewares: []
      priority: 0
      services:
      - kind: Service
        name: radarr
        namespace: media
        port: 7878
    - kind: Rule
      match: PathPrefix(`/sonarr`)
      middlewares: []
      priority: 100
      services:
      - kind: Service
        name: sonarr
        namespace: media
        port: 8989
    - kind: Rule
      match: PathPrefix(`/bazarr`)
      middlewares: []
      priority: 0
      services:
      - kind: Service
        name: bazarr
        namespace: media
        port: 6767
#  - kind: Rule
#    match: PathPrefix(`/`)
#    middlewares: []
#    priority: 1
#    services:
#    - kind: Service
#      name: jellyfin
#      namespace: media
#      port: 8096
#  - kind: Rule
#    match: PathPrefix(`/jackett`)
#    middlewares: []
#    priority: 0
#    services:
#    - kind: Service
#      name: jackett
#      namespace: media
#      port: 9117
#  - kind: Rule
#    match: PathPrefix(`/readarr`)
#    middlewares: []
#    priority: 0
#    services:
#    - kind: Service
#      name: readarr
#      namespace: media
#      port: 8787
#  - kind: Rule
#    match: PathPrefix(`/kavita`)
#    middlewares: []
#    priority: 0
#    services:
#    - kind: Service
#      name: kavita
#      namespace: media
#      port: 5000
#  - kind: Rule
#    match: PathPrefix(`/lidarr`)
#    middlewares: []
#    priority: 0
#    services:
#    - kind: Service
#      name: lidarr
#      namespace: media
#      port: 8686
